--- a/Part2_02MBID_Gestion_datos_Python.ipynb
+++ b/Part2_02MBID_Gestion_datos_Python.ipynb
@@ -116,7 +116,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 546
+          "height": 547
         },
         "id": "TquDokKL6Cu0",
         "outputId": "fde4298a-aed8-4471-9d5f-2c3302c65595"
@@ -234,7 +234,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 383
+          "height": 384
         },
         "id": "So6PJHl6-Zzk",
         "outputId": "17ed74b0-18d7-42b3-97f9-61840b96cbd8"
@@ -1069,7 +1069,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 581
+          "height": 582
         },
         "id": "wRId23oQLzNq",
         "outputId": "44409f9f-9199-4381-ebb6-11cf6e669aa5"
@@ -1496,27 +1496,13 @@
     {
       "cell_type": "code",
       "source": [
-        "SELECT Sala_Nro, Sala_Capacidad FROM rubenquispe.Cine_Sala WHERE Cine_Nombre = 'NombreCine';\n"
+        "SELECT Sala_Nro, Sala_Capacidad FROM rubenquispe.Cine_Sala WHERE Cine_Nombre = 'NombreCine';"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 140
-        },
-        "id": "4v11xWr1dCF8",
-        "outputId": "a9401d70-35d3-48dc-c734-03562a746e46"
+        "id": "VHanUAjnoEBh"
       },
-      "execution_count": 26,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-cd234d91beca>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    SELECT Sala_Nro, Sala_Capacidad FROM rubenquispe.Cine_Sala WHERE Cine_Nombre = 'NombreCine';\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -2129,7 +2115,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 529
+          "height": 530
         },
         "id": "QT3Q222shoqO",
         "outputId": "92f888a5-54ef-49bf-ac14-5797b14f771a"
@@ -2287,6 +2273,115 @@
       ],
       "metadata": {
         "id": "_sJsx8Ob3VZ0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "./dsbulk load -url https://raw.githubusercontent.com/DataStax-Examples/dsbulk-to-astra/master/data.csv -b /path/to/bundle.zip -k <KEYSPACE NAME> -t aire\n",
+        "-u <USERNAME> -p <PASSWORD>"
+      ],
+      "metadata": {
+        "id": "knOpyiqfWm09"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "./dsbulk load -url https://raw.githubusercontent.com/DataStax-Examples/dsbulk-to-astra/master/calidadAire.csv -b /path/to/bundle.zip -k rubenquispe -t aire\n",
+        "-u rllacctarimay@acity.com.pe -p <PASSWORD>"
+      ],
+      "metadata": {
+        "id": "wn4QPmAUWMRq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Opción 1 - Descargar y Cargar en Pasos Separados"
+      ],
+      "metadata": {
+        "id": "ehfsoskeXE_6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "./dsbulk unload -h <CASSANDRA CLUSTER IP> -k rubenquispe -t aire -url /path/to/file/calidadAire.csv\n",
+        "./dsbulk load -url /path/to/file/calidadAire.csv -b /path/to/bundle.zip -k rubenquispe -t aire -u rllacctarimay@acity.com.pe -p <PASSWORD>"
+      ],
+      "metadata": {
+        "id": "Kz0FTsqbXFxH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Opción 2 - Descargar y Cargar Encadenando Pasos"
+      ],
+      "metadata": {
+        "id": "SizcAhvCYwqx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "./dsbulk unload -h <IP DEL CLÚSTER DE CASSANDRA> -k <NOMBRE DEL ESPACIO DE CLAVES> -t aire -url /ruta/a/archivo/calidadAire.csv |\n",
+        " ./dsbulk load -url /ruta/a/archivo/calidadAire.csv -b /ruta/al/bundle.zip -k <NOMBRE DEL ESPACIO DE CLAVES> -t aire -u rllacctarimay@acity.com.pe -p <CONTRASEÑA>\n"
+      ],
+      "metadata": {
+        "id": "aqh8xOs9YxhO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Validación de los Resultados"
+      ],
+      "metadata": {
+        "id": "sKUb5kIyZ5gw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "total | failed | rows/s | p50ms | p99ms | p999ms | batches\n",
+        "  101 |      0 |     94 | 63.92 | 70.25 |  70.25 |   10.10\n",
+        "Operation LOAD_20191113-185907-331567 completed successfully in 0 seconds.\n",
+        "Last processed positions can be found in positions.txt"
+      ],
+      "metadata": {
+        "id": "FrOEC_eCZ1_0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Si deseas verificar que todos tus datos se han cargado correctamente, puedes utilizar la funcionalidad de conteo de DSBulk para verificar que los datos se hayan cargado utilizando el siguiente comando:"
+      ],
+      "metadata": {
+        "id": "DYFdXg6jbKyz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "./dsbulk count -b /path/to/bundle.zip -k rubenquispe -t aire -u rllacctarimay@acity.com.pe -p"
+      ],
+      "metadata": {
+        "id": "hn0qUk4KbLSY"
       },
       "execution_count": null,
       "outputs": []
